# eva01

./: .env.example  .gitignore  CLAUDE.md  README.md  idconfig.py  main.py  package-lock.json  pyproject.toml  record_void.py  requirements.in  requirements.txt  reset_tasks_table.py  server.py  setup.py
.cursor/rules/: eva01-foundation.mdc
.github/workflows/: pages.yml
app/: main.py
app/client/: __init__.py  connection.py  data_manager.py  functions.py  mobile.py  wslclient.py
app/config/: __init__.py  config.py  language.py  log.py
app/core/: __init__.py  classes.py  eva.py  functions.py  ids.py  nodes.py  nodes_setup.py
app/tools/: __init__.py  musician.py  painter.py  screenshot.py  youtuber.py
components/: AudioRecorder.js
config/: __init__.py  config.py  eva.yaml  log.py
docs/: FirstPersonPrompting.md
docs/journal/: entries.json  index.html
eva/actions/: __init__.py  action_buffer.py  buffer.py  system.py
eva/actuators/: __init__.py  buffer.py  voice.py
eva/agent/: __init__.py  chatagent.py  constructor.py  cortex.py  llm.py  schema.py
eva/client/: data_manager.py  wslclient.py
eva/core/: __init__.py  app.py  db.py  graph.py  heart.py  input_buffer.py  journal.py  loader.py  memory.py  mind.py  nodes.py  nodes_legacy.py  people.py  state_legacy.py  tasks.py
eva/database/: db.py
eva/senses/: __init__.py  sense_buffer.py
eva/tools/: __init__.py  feel.py  look_at.py  read.py  search.py  show.py  stay_quiet.py  tasks.py  watch_video.py  watch_youtube.py  web_search.py  youtube.py
eva/utils/: video_analyzer.py
react-eva/: .env.local  README.md  config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
react-eva/components/: AudioRecorder.js  ConnectionStatus.js  EVAAnimation.js  EVAResponse.js  (+2 more)
(+101 files in other folders)
