[project]
name = "eva01"
version = "0.1.1"
description = "Eva01 - an AI being."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

# Runtime dependencies are tracked in requirements.txt.
# Install in dev mode with: pip install -e .
dependencies = []

[project.optional-dependencies]
embed-openai = [
    "openai>=1.0",
]
embed-local = [
    "fastembed>=0.3.0",
]
embed-all = [
    "openai>=1.0",
    "fastembed>=0.3.0",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
# Run EVA directly from the command line after install:  eva
eva = "main:main"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
markers = [
    "live: live integration tests requiring real hardware (webcam) and API keys",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eva*", "config*"]
